Добавлено правило для автоматической переброски файлов на мониторы.

--- a/ansible/playbooks/install-from-src-mate-desktop-and-caja.yml
+++ b/ansible/playbooks/install-from-src-mate-desktop-and-caja.yml
@@ -28,6 +28,7 @@
     - libcanberra-devel
     - dbus-glib-devel
     - git
+    - xdotool
     become: true
 
   - name: Создаем временную директорию
